--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.21.2",
     "react-select": "^5.8.0",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^10.0.4",
     "react-top-loading-bar": "^2.3.1",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.69.7",
     "swiper": "^11.0.5"
   },
