--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 VITE_REACT_APP_API_URL = "https://admin.alphabet7.com/public/api"
 # VITE_REACT_APP_API_URL = "https://meshadigital.com/alpha/public/api"
 VITE_REACT_BASEURL = "https://admin.alphabet7.com/public"
+
+
+VITE_API_KEY=c55b38377070f9e5a42ac80f96f51130
+VITE_API_PASSWORD=7094009326200422
+VITE_SERVER=apitest.fundist.org
+VITE_CASINO_SERVER_IP=0.0.0.0
